# Template.py

./: .gitignore  LICENSE.txt  README.md  copier.yml  pyproject.toml  {{"README.md"}}
src/{{slug_name}}/: __init__.py  __logger__.py  {% if cli %}__main__.py{% endif %}  {{slug_name}}.py
src/{{slug_name}}/{% if cli %}cli{% endif %}/: __init__.py
test/: test_pkgs.py
