[project]
name = "{{project_name}}"
dynamic = ["version"]
description = '{{description}}'
readme = "README.md"
requires-python = ">=3.{{python_version}}"
license = "MIT"
keywords = []
authors = [{ name = "{{username}}", email = "{{email}}" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.{{python_version}}",
]
dependencies = [{% if cli %}"click"{% endif %}]

[project.urls]
Documentation = "https://github.com/{{username}}/{{project_name}}#readme"
Issues = "https://github.com/{{username}}/{{project_name}}/issues"
Source = "https://github.com/{{username}}/{{project_name}}"

{% if cli %}
[project.scripts]
{{slug_name}} = "{{slug_name}}.cli:{{slug_name}}"
{% endif %}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/{{slug_name}}/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest"]
python = "3.{{python_version}}"

[tool.hatch.envs.default.scripts]
unittest = "python -m unittest discover -s src/ --pattern=*.py"
integration_test = "pytest"
test = ["unittest", "integration_test"]
install = "pip install -e ."
